# protobufs

./: Cargo.toml  README.md  buf.gen.yaml  buf.work.yaml  buf.yaml
.github/: CODEOWNERS  dependabot.yaml  labeler.yaml  settings.yml
.github/workflows/: ci.yaml  issues.yaml  pr.yaml
attestapis/: buf.md  buf.yaml
attestapis/attest/v1/: attest.proto
crates/: Cargo.toml  README.md
crates/attestation/grpcio/: Cargo.toml  README.md
crates/attestation/protobuf-types/: Cargo.toml
crates/attestation/tonic/: Cargo.toml  README.md
crates/grpcio/: Cargo.toml  README.md
crates/messages/: Cargo.toml  README.md
crates/tonic/: Cargo.toml  README.md
foundation/: buf.md  buf.yaml
grpcio-gen/: Cargo.toml  README.md
grpcio-gen/src/: main.rs
mobilecoinfoundation/attestation/grpcio/: Cargo.toml  build.rs
mobilecoinfoundation/attestation/grpcio/src/: lib.rs
mobilecoinfoundation/attestation/messages/: Cargo.toml  README.md  build.rs
mobilecoinfoundation/attestation/messages/src/: lib.rs
mobilecoinfoundation/attestation/tonic/: Cargo.toml  build.rs
mobilecoinfoundation/attestation/tonic/src/: lib.rs
mobilecoinfoundation/attestation/v1/: attest.proto  services.proto
template/: Cargo.toml
