[package]
name = "mc-grpcio-gen"
version = "0.1.0"
edition = "2021"
authors = ["MobileCoin"]
rust-version = "1.65"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/probufs"
description = "Generates rust code for gRPCIO"
categories = ['api-bindings', 'command-line-utilities']
keywords = ['grpc', 'prost']

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = [ "derive" ] }
grpcio-compiler = { version = "0.12.0", features = [ "prost-codec" ] }
