[package]
name = "mc-attestation-grpcio"
version = "0.1.0"
edition = "2021"
authors = ["MobileCoin"]
rust-version = { workspace = true }
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/protobufs"
description = "grpcio enclave attestation gRPC client and server"
categories = ["api-bindings", "encoding"]
keywords = ["grpc", "protobuf", "rpc"]

[dependencies]
grpcio = { version = "0.12.0", features = ["prost-codec"] }
mc-attestation-messages = { path = "../messages", version = "0.1.0" }

[build-dependencies]
grpcio-compiler = { version = "0.12.1", features = ["prost-codec"] }
