[package]
name = "mc-attestation-tonic"
version = "0.1.0"
edition = "2021"
authors = ["MobileCoin"]
rust-version = { workspace = true }
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/protobufs"
description = "Tonic enclave attestation gRPC client and server"
categories = ["api-bindings", "encoding"]
keywords = ["grpc", "protobuf", "rpc"]

[dependencies]
mc-attestation-messages = { path = "../messages", version = "0.1.0" }
